# pricing-engine

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.specify/: init-options.json  integration.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: config.py  main.py
app/anomaly/: models.py  prompts.py  service.py
app/api/: catalog_routes.py  routes.py  schemas.py
app/catalog/: __init__.py  schemas.py  service.py
app/db/: base.py  models.py  seed.py  session.py
app/decision/: discounts.py  models.py  rules.py  service.py
app/generation/: prompts.py  service.py
app/migrations/: env.py
app/migrations/versions/: 001_initial.py
app/perception/: llm_adapter.py  prompts.py  service.py
docs/: PROJECT_STATUS.md  ROADMAP.md
docs/decisions/: ADR-0001-swappable-llm-adapter.md  ADR-0002-anomaly-qualitative-pbt-exemption.md  ADR-0003-no-auth-mvp-risk.md  TEMPLATE.md
scripts/: check_coverage.sh
specs/001-pricing/: analyze.md  data-model.md  plan.md  spec.md  status.md  tasks.md
specs/001-pricing/contracts/: price-api.md
specs/002-anomaly-flagging/: analyze.md  plan.md  spec.md  status.md  tasks.md
specs/003-catalog-management/: analyze.md  data-model.md  plan.md  spec.md  status.md  tasks.md
tests/: test_config.py  test_perception_decision_integration.py  test_seed.py  test_session.py  test_startup_security.py
tests/anomaly/: test_models.py
tests/api/: test_catalog_endpoints.py  test_price_endpoint.py
tests/catalog/: __init__.py  test_schemas.py  test_service.py
tests/decision/: test_anomaly_signals.py  test_discounts.py  test_models.py  test_rules.py  test_service.py
tests/generation/: test_service.py
tests/perception/: test_llm_adapter.py  test_service.py
tests/property/: test_invariants.py
