[project]
name = "pricing-engine"
version = "0.1.0"
description = "Dynamic pricing engine with 3-layer architecture (Perception/Decision/Generation)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
]
# B008 (Depends in default arg) is the standard FastAPI pattern.
# See: https://fastapi.tiangolo.com/tutorial/dependencies/
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
# Per-module coverage is gated independently via scripts/check_coverage.sh
# (three separate pytest --cov calls, each with its own --cov-fail-under=80).
# A combined `source` here is deliberately avoided: a single combined average
# can hide a weak module behind strong ones. Branch coverage is enabled so
# branch-level gaps count against the threshold.
branch = true

[tool.coverage.report]
# Default report settings; the real gate is per-module in the script.
fail_under = 80
show_missing = true
